Converted to divs and added scoring

--- a/snake.html
+++ b/snake.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Snake!</title>
-  <script src="jquery.js"></script>
-  <script src="snake_ui.js"></script>
-  <script src="snake.js"></script>
-  <link href="snake.css" type="text/css" rel="stylesheet"/>
+    <title>Snake!</title>
+    <script src="jquery.js"></script>
+    <script src="snake_ui.js"></script>
+    <script src="snake.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+    <link href="snake.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-  <h1>Snake</h1>
-  <div id="board"></div>
-  <script>
-  var snake = new Game.View($("#board"));
-  snake.start();
-  snake.render();
-  </script>
+    <div class="container">
+        <h1>Snake!</h1>
+        <div id="board"></div>
+        <script>
+        var snake = new Game.View($("#board"));
+        snake.start();
+        snake.render();
+        </script>
+    <p id="score"></p>
+    </div>
+
 </body>
 </html>
