Added high score and auto-replay

--- a/snake.html
+++ b/snake.html
@@ -14,10 +14,10 @@
         <div id="board"></div>
         <script>
         var snake = new Game.View($("#board"));
-        snake.start();
-        snake.render();
+        // snake.render();
         </script>
     <p id="score"></p>
+    <p id="high-score"></p>
     </div>
 
 </body>
